package gameLaby.laby;

public interface Attaque {

   public void infligerDegats(Vivant v);

}
